# docs/swagger.yaml
@@ -95,6 +95,29 @@ info:
   title: Fiber Example API
   version: "1.0"
 paths:
+  /delete/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Hapus data presensi.
+      parameters:
+      - description: Masukan ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+        "500":
+          description: Internal Server Error
+      summary: Delete data presensi.
+      tags:
+      - Presensi
   /ins:
     post:
       consumes:
